Removed hardcode username and password and added them to Github Secrets

--- a/.github/workflows/sms-service-tests.yml
+++ b/.github/workflows/sms-service-tests.yml
@@ -4,6 +4,9 @@ on:
     types: closed
     branches: main
   workflow_dispatch:
+env: 
+  PAT_USERNAME: ${{ secrets.PAT_USERNAME }}
+  PAT_PASSWORD: ${{ secrets.PAT_PASSWORD }}
 jobs:
   test:
     timeout-minutes: 10
